--- a/vignettes/VisiumIO.Rmd
+++ b/vignettes/VisiumIO.Rmd
@@ -11,7 +11,7 @@ output:
     number_sections: no
     toc: yes
     toc_depth: 4
-Package: VisiumIO
+package: VisiumIO
 ---
 
 ```{r, setup, include=FALSE}
